fixed discord status and spotify song

--- a/src/styles/discord.css
+++ b/src/styles/discord.css
@@ -84,7 +84,12 @@
     background-color: lightgreen;
 }
 
-.dns
+.idle
+{
+    background-color: orange;
+}
+
+.dnd
 {
     background-color: rgb(255, 0, 0);
 }
