--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,4 +1,3 @@
-/* Center the login form on the page */
 
 #login h1, p
 {
@@ -25,12 +24,10 @@
     height: 100vh;
 }
 
-/* Styling for the title */
 #login-title {
     font-size: 2rem;
 }
 
-/* Styling for the login form */
 #login-form {
     display: flex;
     flex-direction: column;
@@ -40,7 +37,6 @@
     border-radius: 5px;
 }
 
-/* Styling for input fields */
 .login-input {
     width: 100%;
     padding: 10px;
@@ -50,7 +46,30 @@
     font-size: 1rem;
 }
 
-/* Styling for the login button */
+.login-input:-webkit-autofill {
+    background-color: #f9f9f9 !important; 
+    -webkit-box-shadow: 0 0 0px 1000px #f9f9f9 inset !important; 
+    color: #333 !important; 
+    font-size: 1rem !important; 
+}
+
+.login-input:-webkit-autofill:focus {
+    background-color: #f9f9f9 !important; 
+    -webkit-box-shadow: 0 0 0px 1000px #f9f9f9 inset !important;
+    color: #333 !important;
+    font-size: 1rem !important;
+}
+
+.login-input:autofill,
+.login-input:autofill:hover,
+.login-input:autofill:focus,
+.login-input:autofill:active {
+    background-color: #f9f9f9 !important;
+    color: #333 !important;
+    -webkit-text-fill-color: #333 !important; 
+    font-size: 1rem !important;
+}
+
 .login-button {
     padding: 10px;
     color: white;
@@ -64,20 +83,17 @@
 }
 
 
-/* Styling for the signup link */
 .signup-link {
     text-align: center;
     margin-top: 10px;
     font-size: 0.9rem;
 }
 
-/* Color for the link */
 .signup-link a {
     color: #007bff;
     text-decoration: none;
 }
 
-/* Hover effect for the link */
 .signup-link a:hover {
     text-decoration: underline;
 }
