--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -36,14 +36,6 @@
     animation-delay: 1s !important;
 }
 
-#discord-submit
-{
-    opacity: 0;
-    margin-left: 10px;
-    margin-top: 30px;
-    animation: FlyUp 0.5s ease, appear 0.5s ease forwards !important;
-    animation-delay: 1.8s !important;
-}
 
 #upload-image-container
 {
@@ -111,6 +103,29 @@
     cursor: pointer;
 }
 
+.submit-button {
+    margin-bottom: 20px;
+    height: 45px;
+    width: 120px;
+    border-radius: 5px;
+    opacity: 0;
+    margin-left: 10px;
+    background: transparent;
+    color: var(--primary-color);
+    border: 2px var(--secondary-color) solid;
+    transition: transform 0.3s ease;
+    transform-origin: top left;
+    cursor: pointer;
+    animation: FlyUp 0.5s ease, appear 0.5s ease forwards !important;
+    animation-delay: 1s !important;
+}
+
+@media (min-width: 769px) {
+    .submit-button {
+        display: none; /* Hide the button on larger screens */
+    }
+}
+
 @media (max-width: 768px) {
     #photo-input-button {
         width: 50px;
@@ -127,6 +142,11 @@
         content: "+";
         font-size: 24px;
         color: white;
+    }
+
+    #image-grid {
+        align-self: center;
+        justify-content: center;
     }
 
 }
